# SoftwareEnginering_LuaCppLink

./: CMakeLists.txt  README.md  game_2048.lua
Game/: annotations.lua
Project/inc/: AbstractGame.h  Game.h  GameDefines.h  GameEngine.h  GameWinMain.h  resource.h
Project/src/: AbstractGame.cpp  Game.cpp  Game.rc  GameEngine.cpp  GameWinMain.cpp
